--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "Oats from Underground"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Aashiq Dheeraj"
+description              : "Glorified Scratch Paper"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -77,11 +77,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Aashiq Dheeraj"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : "Perpetually Disgruntled Trader"
   location         : "Somewhere"
-  email            :
+  email            : "aashiq.d@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
