update bio photo

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Aashiq Dheeraj"
-  avatar           : "bio-photo.jpg"
+  avatar           : "scowl.jpg"
   bio              : "Perpetually Disgruntled Trader"
   location         : "Somewhere"
   email            : "aashiq.d@gmail.com"
