--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ analytics:
 author:
   name             : "Aashiq Dheeraj"
   avatar           : "scowl.jpg"
-  bio              : "Perpetually Disgruntled Trader"
-  location         : "Somewhere"
+  bio              : "An Unpleasant Man"
+  location         : "Chicago"
   email            : "aashiq.d@gmail.com"
   uri              :
   bitbucket        :
