--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Oats from Underground"
+title                    : "Not So Scratch Paper"
 title_separator          : "-"
 name                     : "Aashiq Dheeraj"
 description              : "Glorified Scratch Paper"
