--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "scowl.jpg"
   bio              : "An Unpleasant Man"
   location         : "Chicago"
-  email            : "aashiq.d@gmail.com"
+  email            : "me@aashiqdheeraj.com"
   uri              :
   bitbucket        :
   codepen          :
