--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Not So Scratch Paper"
 title_separator          : "-"
 name                     : "Aashiq Dheeraj"
 description              : "Glorified Scratch Paper"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://aashiqdheeraj.com
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
